mostly functional now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,19 @@ h2 {
 	line-height: 50px;
 }
 
+h3 {
+	font-family: 'Homemade apple', cursive;
+	font-size: 22px;
+	text-align: center;
+	color: darkblue;
+	line-height: 32px;
+	margin: 15px 0px;
+}
+
 p {
-	font-size: 28px;
+	font-size: 32px;
 	font-family: 'Reenie Beanie', cursive;
-	line-height: 50px;
+	line-height: 40px;
 	color: darkblue;
 	text-align: center;
 }
@@ -35,7 +44,23 @@ div {
 }
 
 img {
-	padding: 10px 0px 30px 50px;
+	padding: 0px 0px 10px 40px;
 }
 
+button {
+	background-color: darkblue;
+	color: lavender;
+	font-size: 24px;
+	font-family: 'Reenie Beanie', cursive;
+	text-align: center;
+	margin: 20px 10px;
+	padding: 10px;
+	border-radius: 10px;
+	border: 3px solid lavender;
+	cursor: pointer;
+}
+
+button:hover {
+
+}
 
