--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 /* hangman styles */
+html {
+	position: relative;
+	padding: 0px;
+	margin: 0px;
+}
+
 body {
 	padding: 10px 10px;
 	background: url(../images/parchment.jpg);
@@ -24,25 +30,18 @@ h2 {
 h3 {
 	font-family: 'Princess Sofia', cursive;
 	font-size: 26px;
-	/*text-align: center;*/
-	line-height: 32px;
-	margin: 15px 0px;
+	margin: 20px 0px;
 }
 
 p {
 	font-size: 32px;
 	font-family: 'Reenie Beanie', cursive;
-	line-height: 40px;
-	/*text-align: center;*/
+	margin-top: 12px 0px;
 }
 
 div {
-	width: calc(50% - 20px);
+	width: 31.99%;
 	margin-top: 1.5%;
-}
-
-img {
-	padding: 20px 0px 10px 80px;
 }
 
 button {
@@ -51,7 +50,7 @@ button {
 	font-size: 24px;
 	font-family: 'Princess Sofia', cursive;
 	text-align: center;
-	margin: 20px 10px;
+	margin: 2%;
 	padding: 10px 20px;
 	border-radius: 10px;
 	cursor: url("../images/wand.png"), pointer;
@@ -59,6 +58,11 @@ button {
 
 .left {
 	float: left;
+	padding-left: 2%;
+}
+
+.child {
+	width: 100%;
 }
 
 .right {
@@ -69,5 +73,35 @@ button {
 	text-align: center;
 }
 
+.smaller {
+	font-size: 22px;
+	margin-top: 12px;
+}
 
+.height {
+	vertical-align: middle;
+	padding: 10% 0;
+}
+
+.clear:after {
+	clear: both;
+}
+
+.display {
+	display: initial;
+}
+
+.hidden {
+	display: none;
+}
+
+#winner {
+	position: absolute;
+	height: 100vh;
+	width: 100%;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
 
